--- a/requirements.txt
+++ b/requirements.txt
@@ -58,6 +58,7 @@ six==1.17.0
 # Development and deployment
 gunicorn==19.5.0
 wheel==0.24.0
+dj-database-url==0.5.0
 
 # System dependencies (auto-installed)
 cffi==1.17.1
