--- a/render.yaml
+++ b/render.yaml
@@ -1,9 +1,9 @@
 services:
   - type: web
-    name: codebuzz
+    name: hackIDE_project
     env: python
-    buildCommand: "./build.sh"
-    startCommand: "gunicorn hackIDE_project.wsgi:application"
+    buildCommand: pip install -r requirements.txt && python manage.py collectstatic --noinput
+    startCommand: gunicorn hackIDE_project.wsgi
     envVars:
       - key: PYTHON_VERSION
-        value: 3.9.16
+        value: 3.11.9
