--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,7 @@
+# Web server and static files
+gunicorn>=20.1.0
+dj-database-url
+whitenoise>=6.0.0
 # Core Django and web framework
 Django==5.2.5
 asgiref==3.9.1
@@ -6,8 +10,6 @@ sqlparse==0.5.3
 # CORS and middleware
 django-cors-headers==3.14.0
 
-# Static file serving
-whitenoise==6.7.0
 
 # HTTP requests and API calls
 requests==2.32.5
@@ -26,13 +28,11 @@ oauthlib==0.6.1
 Pillow==10.4.0
 PyPDF2==1.25.1
 
-# Face detection for proctoring (optional - will be installed if compatible)
-# Note: These packages are optional and only needed for proctoring functionality
-# If deployment fails due to these packages, they can be removed
-# mediapipe>=0.8.11
-# opencv-python>=4.5.5.64
-# opencv-contrib-python>=4.5.5.64
-# numpy>=1.21.6
+# Face detection for proctoring
+mediapipe==0.10.21
+opencv-python==4.11.0.86
+opencv-contrib-python==4.11.0.86
+numpy==1.26.4
 
 # Code highlighting and templating
 Pygments==2.7.4
@@ -58,9 +58,8 @@ PyYAML==6.0.2
 six==1.17.0
 
 # Development and deployment
-gunicorn==22.0.0
+gunicorn>=20.1.0
 wheel==0.24.0
-dj-database-url==0.5.0
 
 # System dependencies (auto-installed)
 cffi==1.17.1
