--- a/render.yaml
+++ b/render.yaml
@@ -1,9 +1,9 @@
 services:
   - type: web
-    name: hackIDE_project
+    name: codebuzz
     env: python
-    buildCommand: pip install -r requirements.txt && python manage.py collectstatic --noinput
-    startCommand: gunicorn hackIDE_project.wsgi
+    buildCommand: "./build.sh"
+    startCommand: "gunicorn hackIDE_project.wsgi:application"
     envVars:
       - key: PYTHON_VERSION
-        value: 3.11.9
+        value: 3.9.16
